# LaboratoriodiProgrammazione

./: CMakeLists.txt  Date.cpp  Date.h  Observer.cpp  Observer.h  ShoppingItem.cpp  ShoppingItem.h  ShoppingList.cpp  ShoppingList.h  Subject.cpp  Subject.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  runAllTests.cpp  test_ShoppingList.cpp  test_User.cpp  test_shoppingItem.cpp
